paintedravendesign.com/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-paintedravendesign.com
spec:
  hosts:
  - "paintedravendesign.com"
  - "www.paintedravendesign.com"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: paintedravendesign.leenet.svc.cluster.local
          port:
            number: 80
